# mfrc522-python

./: README.md  pyproject.toml  tea.yaml
.github/workflows/: publish.yml
src/mfrc522/: BasicMFRC522.py  MFRC522.py  SimpleMFRC522.py  __init__.py
