[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mfrc522-python"
version = "0.0.5.dev1"
authors = [
  { name="Aditya"},
]
description = "The mfrc522 library is used to interact with RFID readers that use the MFRC522 chip"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/1AdityaX/mfrc522-python"
"Bug Tracker" = "https://github.com/1AdityaX/mfrc522-python/issues"
